# hmac-cpp

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README-RU.md  README.md  build_all.bat  build_all_mingw.bat  build_lib_mingw.bat  example.cpp  example_encoding.cpp  example_pbkdf2.cpp  example_secret.cpp  example_streaming.cpp  hmac.cpp  hmac.hpp  hmac.mqh  hmac_timed_token.cpp  hmac_timed_token.hpp  hmac_timed_token.mqh  hmac_utils.cpp  hmac_utils.hpp  hmac_utils.mqh  sha1.cpp  sha1.hpp  sha256.cpp  sha256.hpp  sha256.mqh  sha512.cpp  sha512.hpp  sha512.mqh  test_all.cpp  test_hmac.mq5  test_totp.cpp
.github/workflows/: CI-Linux.yml  CI-Win.yml  CI-macOS.yml  benchmarks.yml  secure_zero_odr.yml  tests.yml
cmake/: hmac_cpp.pc.in  hmac_cppConfig.cmake.in  hmac_cppConfigVersion.cmake.in
code_blocks/example/: example.cbp  main.cpp
include/hmac_cpp/: api.hpp  encoding.hpp  hmac.hpp  hmac_utils.hpp  memlock.hpp  secret.hpp  secret_string.hpp  secure_buffer.hpp  sha1.hpp  sha256.hpp  sha512.hpp  version.hpp
ports/hmac-cpp/: portfile.cmake  vcpkg.json
scripts/: run_benchmarks.sh  run_tests.sh
src/: encoding.cpp  hmac.cpp  hmac_utils.cpp  memlock.cpp  sha1.cpp  sha256.cpp  sha512.cpp
tests/odr/: main.cpp  platform_stubs.cpp  stubs.cpp  tu_explicit.cpp  tu_manual.cpp  tu_memset.cpp  tu_memsets.cpp
